--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "gulp",
-    "build-html": "gulp html"
+    "build-html": "gulp html",
+    "deploy": "gulp build && gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
@@ -48,5 +49,8 @@
   "engines": {
     "node": "^16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
